:recycle: Refactor package structure and update entity classes for video management